--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context="activity.PermissionActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="권한설정"
+        android:textSize="50sp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
