--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="activity.LoginActivity">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="로그인"
+        android:textSize="50sp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
