--- a/app/src/main/res/layout/activity_join_profile.xml
+++ b/app/src/main/res/layout/activity_join_profile.xml
@@ -4,6 +4,244 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="activity.JoinProfileActivity">
+    tools:context="activity.JoinProfileActivity"
+    android:paddingBottom="40dp"
+    android:paddingTop="40dp"
+    android:paddingRight="20dp"
+    android:paddingLeft="20dp">
+
+    <TextView
+        android:id="@+id/joinProfile_mainTitle"
+        android:text="@string/permission_mainTitle"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="23sp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginBottom="20dp"
+        />
+
+    <TextView
+        android:id="@+id/joinProfile_subTitle"
+        android:text="@string/permission_subTitle"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_mainTitle"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="15sp"
+        android:gravity="center"
+        android:layout_marginBottom="20dp"
+        />
+
+    <FrameLayout
+        android:id="@+id/joinProfile_framImgae"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_subTitle"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        >
+
+        <ImageView
+            android:id="@+id/joinProfile_imageView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/imageview_circle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+        <ImageView
+            android:id="@+id/joinProfile_imageViewIcon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="right|bottom"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:src="@drawable/ic_camera"
+            />
+
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/joinProfile_txtNickName"
+        android:text="@string/joinProfile_nickName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="13sp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_framImgae"
+        />
+
+    <EditText
+        android:id="@+id/joinProfile_editTxtNickName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textAlignment="textStart"
+        android:theme="@style/editTextStyle"
+        android:hint="@string/joinProfile_nickName"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_txtNickName"
+        />
+
+    <TextView
+        android:id="@+id/joinProfile_gender"
+        android:text="@string/joinProfile_gender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="13sp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/joinProfile_editTxtNickName"/>
+
+    <RadioGroup
+        android:id="@+id/joinProfile_RadioGrpGender"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/joinProfile_gender">
+
+        <RadioButton
+            android:id="@+id/joinProfile_GenderWomen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/joinProfile_women"
+            android:layout_weight="0.5"
+            android:textSize="11sp"
+            android:buttonTint="@color/mainColor"
+            />
+
+        <RadioButton
+            android:id="@+id/joinProfile_GenderoMen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/joinProfile_men"
+            android:layout_weight="0.5"
+            android:textSize="11sp"
+            android:buttonTint="@color/mainColor"/>
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/joinProfile_txtBerth"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/joinProfile_berth"
+        android:textSize="13sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="3dp"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_RadioGrpGender"
+        />
+    <EditText
+        android:id="@+id/joinProfile_editTxtBerth"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textAlignment="textStart"
+        android:theme="@style/editTextStyle"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_txtBerth"
+        />
+
+    <TextView
+        android:id="@+id/joinProfile_txtIntro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/joinProfile_introduction"
+        android:textSize="13sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="3dp"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_editTxtBerth"
+        />
+    <EditText
+        android:id="@+id/joinProfile_editTxtIntro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textAlignment="textStart"
+        android:theme="@style/editTextStyle"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_txtIntro"
+        />
+
+    <TextView
+        android:id="@+id/joinProfile_txtInerestedCity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/joinProfile_interestedCity"
+        android:textSize="13sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="3dp"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_editTxtIntro"
+        />
+    <EditText
+        android:id="@+id/joinProfile_editTxtInterestedCity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textAlignment="textStart"
+        android:theme="@style/editTextStyle"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_txtInerestedCity"
+        />
+
+    <TextView
+        android:id="@+id/joinProfile_txtAccountQuestion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/joinProfile_accountQuestion"
+        android:textSize="13sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="3dp"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_editTxtInterestedCity"
+        />
+
+    <EditText
+        android:id="@+id/joinProfile_editTxtAccountQuestion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textAlignment="textStart"
+        android:theme="@style/editTextStyle"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_txtAccountQuestion"
+        />
+
+    <TextView
+        android:id="@+id/joinProfile_txtAccountAnswer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/joinProfile_accountAnswer"
+        android:textSize="15sp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_editTxtAccountQuestion"
+        />
+    <EditText
+        android:id="@+id/joinProfile_editTxtAccountAnswer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textAlignment="textStart"
+        android:theme="@style/editTextStyle"
+        app:layout_constraintTop_toBottomOf="@+id/joinProfile_txtAccountAnswer"
+        />
+
+    <Button
+        android:id="@+id/joinProfile_btnComplete"
+        android:background="@drawable/button_round_border"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/next"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
