--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -11,8 +11,8 @@
     android:paddingLeft="20dp">
 
     <TextView
-        android:id="@+id/permission_main_title"
-        android:text="@string/permission_main_title"
+        android:id="@+id/permission_mainTitle"
+        android:text="@string/permission_mainTitle"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,19 +23,19 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textStyle="bold"
+        android:layout_marginBottom="20dp"
         />
     
     <TextView
-        android:id="@+id/permission_sub_title"
-        android:text="@string/permission_sub_title"
+        android:id="@+id/permission_subTitle"
+        android:text="@string/permission_subTitle"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/permission_main_title"
+        app:layout_constraintTop_toBottomOf="@+id/permission_mainTitle"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textSize="15sp"
-        android:layout_marginTop="10dp"
         android:gravity="center"
         android:layout_marginBottom="20dp"
         />
