--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="btnYellow">#FFEB3B</color>
+    <color name="mainColor">#FFEB3B</color>
+
+    <color name="editBoxFocusedUnderLine">#F7D63B</color>
 </resources>
